--- a/lecturer/html/myCourse.html
+++ b/lecturer/html/myCourse.html
@@ -26,8 +26,8 @@
 
 
   </body>
-  <script src="jquery-3.6.0.js"></script>
-  <script src="popup.js" type="module"></script>
+  <script src="../js/jquery-3.6.0.js"></script>
+  <script src="../js/myCourse.js" type="module"></script>
   
 
 
