--- a/lecturer/html/newCourse.html
+++ b/lecturer/html/newCourse.html
@@ -4,10 +4,10 @@
 	 <!-- <link rel="stylesheet" href="button.css"> -->
   </head>
   <body>
- 	<div id = "newCourseDiv" style="background-color:lightblue;">
+ 		<div id = "newCourseDiv" style="background-color:lightblue;">
 	  	<form id="newCourseForm">
 	  		<label for="course_name">Course name:</label><br>
-	  		<input type = "text" id="course_name" required=""><br>
+	  		<input type = "text" id="course_name" required><br>
 	  		<label for="lecturer_email">Lecturer email:</label><br>
 	  		<input type = "text"id="lecturer_email" required><br>
 	  		<label for="student_info">Student info file:</label><br>
@@ -17,8 +17,8 @@
 	  	<button id = "register_submit">Submit</button><br>
   	</div>
   </body>
-  <script src="jquery-3.6.0.js"></script>
-  <script src="newCourse.js" type="module"></script>
+  <script src="../js/jquery-3.6.0.js"></script>
+  <script src="../js/newCourse.js" type="module"></script>
 
 
   <style type="text/css">
