--- a/student/html/popup.html
+++ b/student/html/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <title>Attendance Checker</title>
         <script src="js/hCaptchaAPI.js"></script>
     </head>
