--- a/student/html/challenge.html
+++ b/student/html/challenge.html
@@ -2,17 +2,14 @@
 <html>
     <head>
         <title>Attendance Checker</title>
-        <script src="https://hcaptcha.com/1/api.js" async defer></script>
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     </head>
     <body>
         <form name="challengeForm">
             <input type="hidden" id="courseID" name="courseID" value=""><br>
             <input type="hidden" id="userToken" name="userToken" value=""><br>
-            <div class="h-captcha" data-sitekey="5f21771d-d1af-4c9b-9ce1-236df8ec5708"></div>
-            <button id="updateButton">Update</button>
-
+            <div class="g-recaptcha" data-sitekey="6Le-piobAAAAAJXR_vaBmeCbQtdOaMmk0k42IVnS"></div><br/>
+            <button id="checkInButton">Check in</button>
         </form><br>
-
-    </body>
     <script src="../js/challenge.js"></script>
 </html>
