--- a/student/html/popup.html
+++ b/student/html/popup.html
@@ -3,7 +3,6 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <title>Attendance Checker</title>
-        <script src="js/hCaptchaAPI.js"></script>
     </head>
     <body>
         <form name="infoForm">
@@ -28,13 +27,9 @@
                 <input type="text" id="userToken" name="userToken" value=""><br>
             </div>
 
-            <button id="updateButton">Update</button>
+            <button id="updateButton">Update Info</button>
 
         </form><br>
-
-        <div id="challengeDiv", style="display: none">
-            <div class="h-captcha" data-sitekey="5f21771d-d1af-4c9b-9ce1-236df8ec5708"></div>
-        </div>
 
         <button id="endClass">End Class</button>
 
