--- a/server/recapchaDomain.html
+++ b/server/recapchaDomain.html
@@ -22,7 +22,7 @@
             data.append("studentToken", userToken);
             data.append("courseID", courseID);
             data.append("token", token);
-            const url = "http://seekrealthing.net/Challenge";
+            const url = "http://seekrealthing.net/challenge";
             fetch(url, {
                 method: 'POST',
                 body: data,
