--- a/server/recaptchaDomain.html
+++ b/server/recaptchaDomain.html
@@ -5,7 +5,7 @@
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
-    <form name="challengeForm" action="/challenge" method = "post">
+    <form name="challengeForm" action="/recaptcha" method = "post">
         <input type="hidden" id="courseID" name="courseID" value=""><br>
         <input type="hidden" id="studentToken" name="studentToken" value=""><br>
         <div class="g-recaptcha" data-sitekey="6Le-piobAAAAAJXR_vaBmeCbQtdOaMmk0k42IVnS"></div><br />
